--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 .grid {
   max-width: 1000px;
   display: grid;
-  grid-template-columns: 1fr 2fr 1fr;
+  grid-template-columns:repeat(3, minmax(200px, 1fr));
   grid-template-rows: 100px 200px;
   grid-gap: 15px;
 }
