--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* ============= Grid Layout ============= */
 
-.grid {
+/* .grid {
   max-width: 1000px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
@@ -8,4 +8,8 @@
   grid-gap: 15px;
   grid-auto-columns: 1fr;
   grid-auto-flow: column;
+} */
+
+.container {
+  
 }
