--- a/style.css
+++ b/style.css
@@ -12,24 +12,29 @@
 
 .container {
   height: 100vh;
+  width: 100%;
   display: grid;
   grid-template-columns: 2fr 1fr;
-  grid-template-rows: 100px minmax(200px, 1fr) 100px 50px   100px;
+  grid-template-rows: 100px minmax(200px, 1fr) 100px;
   grid-gap: 10px;
+  grid-template-areas:
+    "header header"
+    "main aside"
+    "main footer";
 }
 
 header {
-  grid-column: 1 / -1;
+  grid-area: header;
 }
 
 main {
-  grid-row: 2 / 3;
+  grid-area: main;
 }
 
 aside {
-  grid-row: 2 / -1;
+  grid-area: aside;
 }
 
 footer {
-  grid-row: -3 / -1;
+  grid-area: footer;
 }
