--- a/style.css
+++ b/style.css
@@ -14,17 +14,21 @@
   height: 100vh;
   width: 100%;
   display: grid;
-  grid-template-columns: 2fr 1fr;
+  grid-template-columns: 1fr 2fr 1fr;
   grid-template-rows: 100px minmax(200px, 1fr) 100px;
   grid-gap: 10px;
   grid-template-areas:
-    "header header"
-    "main aside"
-    "main footer";
+    "header header nav"
+    "main main aside"
+    "footer footer footer";
 }
 
 header {
   grid-area: header;
+}
+
+nav {
+  grid-area: nav;
 }
 
 main {
